[metadata]
name = templite
version = 1.0
author = Ned Batchelder
author-email = ned@nedbatchelder.com
home-page = https://github.com/nedbat/coveragepy
description = Minimal template engine
license = MIT

[options]
zip_safe = true
package_dir=
    =src
packages = find:

[sdist]
formats = zip

[bdist_wheel]
universal = 1

[coverage:run]
branch = True
source = src
