[tool.poetry]
name = "promplate"
version = "0.2.3"
description = "cross-language prompt engineering framework"
homepage = "https://promplate.dev/"
repository = "https://github.com/promplate/core"
authors = ["Muspi Merol <admin@muspimerol.site>"]
license = "MIT"
readme = "README.md"
keywords = ["prompt", "template", "nlp", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Markup",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^4"
aiohttp = { version = "3.9.0b0", python = ">=3.12", optional = true }
aiofiles = { version = "^23.2", optional = true }
httpx = { version = ">=0.24, <1.0", optional = true }
openai = { version = ">=0.27, <1.0", optional = true }

[tool.poetry.extras]
aiofiles = ["aiofiles"]
httpx = ["httpx"]
openai = ["openai"]
all = ["aiofiles", "httpx", "openai"]

[tool.poetry.group.dev.dependencies]
isort = "^5"
black = "^23"
pytest = "^7"

[tool.poetry.scripts]
format = "reformat:main"
test = "pytest:main"

[tool.pyright]
exclude = ["**/compatible", "tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
